fix(openapi): add missing txmonitor hastx path param
